.k8s/elChat/service.yml
apiVersion: v1
kind: Service
metadata:
  name: elchat # Change this to your app name
  namespace: m324-csbe-augustiny # Ask the teacher for the namespace name
spec:
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
  selector:
    app: elchat # Change this to your app name
